Completed jest testing,firebase integration,crashlaytics and search option

--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
     "@react-native-community/masked-view": "^0.1.5",
     "@react-native-firebase/app": "^6.2.0",
     "@react-native-firebase/crashlytics": "^6.2.0",
+    "fabric": "^3.6.0",
     "jest-cli": "^24.9.0",
     "react": "16.9.0",
     "react-native": "0.61.5",
     "react-native-elements": "^1.2.7",
+    "react-native-fabric": "^0.5.2",
+    "react-native-fabric-crashlytics": "^0.1.8",
     "react-native-gesture-handler": "^1.5.3",
     "react-native-paper": "^3.4.0",
     "react-native-read-more-text": "^1.1.0",
