--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,5 +1,5 @@
 apply plugin: "com.android.application"
-// apply plugin: 'io.fabric'
+ apply plugin: 'io.fabric'
 import com.android.build.OutputFile
 
 /**
@@ -183,13 +183,14 @@ android {
 dependencies {
     implementation project(':react-native-gesture-handler')
     implementation fileTree(dir: "libs", include: ["*.jar"])
-    implementation "com.facebook.react:react-native:+"  // From node_modules
-//    implementation 'com.google.firebase:firebase-analytics:17.2.0'
-    implementation "com.google.android.gms:play-services-base:16.1.0"
-//    implementation "com.google.firebase:firebase-core:16.0.9"
+    implementation "com.facebook.react:react-native:0.20.1"  // From node_modules
+   implementation 'com.google.firebase:firebase-analytics:17.2.1'
+    implementation "com.google.android.gms:play-services-base:17.1.0"
+   implementation "com.google.firebase:firebase-core:17.2.1"
       implementation 'com.android.support:multidex:1.0.3'
-
-    // implementation 'com.crashlytics.sdk.android:crashlytics:2.10.1'
+    implementation project(':react-native-fabric')
+    implementation 'com.crashlytics.sdk.android:crashlytics:2.10.1'
+    
     // implementation ('com.crashlytics.sdk.android:crashlytics:2.10.1@aar') {
     //     transitive = true;
    // }
