--- a/android/build.gradle
+++ b/android/build.gradle
@@ -11,11 +11,15 @@ buildscript
     repositories {
         google()
         jcenter()
+        maven {
+            url 'https://maven.fabric.io/public'
+        }
     }
     dependencies {
-        classpath("com.android.tools.build:gradle:3.4.2")
+        classpath('com.android.tools.build:gradle:3.5.3')
         classpath 'com.google.gms:google-services:4.3.2'
-        // classpath 'io.fabric.tools:gradle:1.+'
+
+         classpath 'io.fabric.tools:gradle:1.31.2'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -33,9 +37,7 @@ allprojects {
             url("$rootDir/../node_modules/jsc-android/dist")
         }
 
-                // maven {
-                //     url 'https://maven.fabric.io/public'
-                // }
+
 
         google()
         jcenter()
