--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "@react-native-community/masked-view": "^0.1.5",
     "@react-native-firebase/app": "^6.2.0",
     "@react-native-firebase/crashlytics": "^6.2.0",
+    "@sentry/react-native": "^1.2.1",
+    "es6-promise": "^4.2.8",
     "fabric": "^3.6.0",
+    "isomorphic-fetch": "^2.2.1",
     "jest-cli": "^24.9.0",
     "react": "16.9.0",
     "react-native": "0.61.5",
@@ -41,13 +44,23 @@
     "@babel/runtime": "7.7.7",
     "@react-native-community/eslint-config": "0.0.5",
     "babel-jest": "24.9.0",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.2",
     "eslint": "6.8.0",
     "jest": "24.9.0",
+    "jest-environment-enzyme": "^7.1.2",
+    "jest-enzyme": "^7.1.2",
     "metro-react-native-babel-preset": "0.56.3",
+    "react-dom": "^16.12.0",
     "react-test-renderer": "16.9.0"
   },
   "jest": {
     "preset": "react-native",
+    "setupTestFrameworkScriptFile": "jest-enzyme",
+    "testEnvironment": "enzyme",
+    "testEnvironmentOptions": {
+      "enzymeAdapter": "react16"
+    },
     "cacheDirectory": "./cache",
     "coveragePathIgnorePatterns": [
       "./app/utils/vendor"
